register, login and logout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
+spring.thymeleaf.extras.springsecurity6.enabled=true
+spring.thymeleaf.enable-spring-el-compiler=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/event_app
 spring.datasource.username=postgres
